
* The Mesh Server will require Java 11 with the release of 2.0.0. The runtime support for Java 8 will be dropped. The Mesh Java REST client will still be usable with Java 8.

[[v1.4.7]]
== 1.4.7 (TBD)

icon:checked[] Elasticsearch: Fixed a bug that prevented Elasticsearch synchronization of projects after deleting a role. link:https://github.com/gentics/mesh/issues/1041[#1041]

[[v1.4.6]]
== 1.4.6 (20.04.2020)

icon:plus[] Clustering/Graph: The already existing `synchronizeWrites` feature has been extended. A cluster-wide write lock will now be used when running in clustered mode. This drastically reduces contention. The lock will also be used when new instances join the cluster to prevent synchronization issues with distributed transactions.

icon:plus[] Graph: The internal transaction handling has been refactored and unified to better accommodate the new global write lock mechanism.

icon:check[] Clustering: The cluster startup and shutdown processes have been modified to be less error prone. Hazelcast will now be started before OrientDB. Cluster instances now join the cluster sequentially instead of parallel. This results in a slower but more stable cluster startup process. The shutdown process will now avoid a write gap in which already dispatched distributed transactions could potentially be lost.

[[v1.4.5]]
== 1.4.5 (17.04.2020)

icon:plus[] Server: The `serverTokens` flag and `MESH_HTTP_SERVER_TOKENS` env has been added to the server config. The flag controls whether server version information can be exposed via REST (/api/v1, /api/v2), GraphQL or HTTP headers. By default server tokens are enabled.

icon:check[] Changelog: The automated recovery introduced in v1.4.4 now renames duplicate versions instead of deleting them.

icon:plus[] Image Manipulation: Gentics Mesh now supports the ´auto´ parameter when manipulating images. For more info check the link:{{< relref "image-manipulation.asciidoc" >}}[Image Manipulation documentation].
