@@ -5,6 +5,8 @@ import static io.netty.handler.codec.http.HttpResponseStatus.BAD_REQUEST;
 
 import org.apache.commons.lang3.StringUtils;
 
+import com.gentics.mesh.context.InternalActionContext;
+import com.gentics.mesh.core.data.MeshAuthUser;
 import com.gentics.mesh.core.rest.error.GenericRestException;
 
 public class AbstractHandler {
@@ -22,4 +24,5 @@ public class AbstractHandler {
 			throw error(BAD_REQUEST, "error_request_parameter_missing", name);
 		}
 	}
+
 }
